After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725579 - Break out two widgets as separate classes / GtkBuilder templates
Break out two widgets as separate classes / GtkBuilder templates
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-03 14:36 UTC by Kalev Lember
Modified: 2014-03-06 22:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Set the main window as the parent for error dialogs (1.37 KB, patch)
2014-03-03 14:37 UTC, Kalev Lember
committed Details | Review
Break out the history dialog as a separate object (27.03 KB, patch)
2014-03-03 14:37 UTC, Kalev Lember
committed Details | Review
Break out the update dialog as a separate object (47.28 KB, patch)
2014-03-03 14:37 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2014-03-03 14:36:25 UTC
Patches to move the update dialog and the history dialog to separate classes / GtkBuilder templates, instead of having them in the huge gnome-software.ui file.
Comment 1 Kalev Lember 2014-03-03 14:37:16 UTC
Created attachment 270808 [details] [review]
Set the main window as the parent for error dialogs
Comment 2 Kalev Lember 2014-03-03 14:37:20 UTC
Created attachment 270809 [details] [review]
Break out the history dialog as a separate object

At the same time, move to a separate GtkBuilder template.
Comment 3 Kalev Lember 2014-03-03 14:37:24 UTC
Created attachment 270810 [details] [review]
Break out the update dialog as a separate object

At the same time, move to a separate GtkBuilder template.
Comment 4 Matthias Clasen 2014-03-05 23:10:59 UTC
Review of attachment 270808 [details] [review]:

yes
Comment 5 Matthias Clasen 2014-03-05 23:13:09 UTC
Review of attachment 270809 [details] [review]:

long overdue, thanks !
Comment 6 Matthias Clasen 2014-03-05 23:13:46 UTC
Review of attachment 270810 [details] [review]:

this too
Comment 7 Kalev Lember 2014-03-06 22:36:49 UTC
Thanks for the review!

Attachment 270808 [details] pushed as 9e8a63d - Set the main window as the parent for error dialogs
Attachment 270809 [details] pushed as 403cb9b - Break out the history dialog as a separate object
Attachment 270810 [details] pushed as 99fb74b - Break out the update dialog as a separate object