Break out the history dialog as a separate object

At the same time, move to a separate GtkBuilder template.

https://bugzilla.gnome.org/show_bug.cgi?id=725579